[package]
name = "xiao_nrf52840_sword"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-nrf = { version = "0.10.0", features = ["nrf52840"] }
embassy-time = "0.5.1"
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread"] }
embedded-hal-async = "1.0.0"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
lsm6ds3tr = "0.2.2"
cortex-m-rt = "0.7"
nrf52840-hal = { version = "0.19.0", features = ["rt"] }
linked_list_allocator = "0.10"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1