[package]
name = "xiao_nrf52840_sword"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
# Embedded feature: enables all embedded-specific dependencies
embedded = [
    "embassy-time",
    "embassy-executor",
    "embassy-sync",
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "lsm6ds3tr",
    "cortex-m-rt",
    "nrf52840-hal",
    "linked_list_allocator",
]

[[bin]]
name = "xiao_nrf52840_sword"
required-features = ["embedded"]
test = false  # Exclude binary from test suite (lib-only tests)

[dependencies]
# Core dependencies (lib-usable, std-compatible)
# (none at the moment, all are embedded-specific)

# Embedded-only dependencies
embassy-time = { version = "0.5.1", optional = true }
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread"], optional = true }
embassy-sync = { version = "0.8.0", optional = true }
defmt = { version = "1.1.0", optional = true }
defmt-rtt = { version = "1.2.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
lsm6ds3tr = { version = "0.2.2", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
nrf52840-hal = { version = "0.19.0", optional = true }
linked_list_allocator = { version = "0.10", optional = true }

[profile.release]
opt-level = "s"
lto = false
codegen-units = 1